# RaspiPicoTracer_Prototype_V4

./: CMakeLists.txt  LICENSE  README.md  RaspiPicoTracer.c
application/: CMakeLists.txt  battery_monitor.c  battery_monitor.h  control.c  control.h  dc_motor.c  dc_motor.h
document/PCB/RaspiPicoTracerPV4/: RaspiPicoTracerPV4.GBL  RaspiPicoTracerPV4.GBS  RaspiPicoTracerPV4.GML  RaspiPicoTracerPV4.GTL  RaspiPicoTracerPV4.GTO  RaspiPicoTracerPV4.GTS  RaspiPicoTracerPV4.drl
document/PCB/TracerSensor_X4/: TracerSensor_X4.GBL  TracerSensor_X4.GBO  TracerSensor_X4.GBS  TracerSensor_X4.GML  TracerSensor_X4.GTL  TracerSensor_X4.GTS  TracerSensor_X4.drl
document/circuit/: RaspiPicoTracer_Prototype_V4.CE3
driver/: CMakeLists.txt  TB6612FNG.c  TB6612FNG.h  adchange.c  adchange.h  cycle.c  cycle.h  indicators.c  indicators.h  lineSensor.c  lineSensor.h  sw.c  sw.h
